--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
       <artifactId>spire_2.10</artifactId>
       <version>0.11.0</version>
     </dependency>
+    <dependency>
+      <groupId>args4j</groupId>
+      <artifactId>args4j</artifactId>
+      <version>[2.0.29,)</version>
+    </dependency>
   </dependencies>
 
 </project>
