--- a/pom.xml
+++ b/pom.xml
@@ -295,10 +295,10 @@
       </exclusions>
     </dependency>
     <dependency>
+      <!-- Used mostly in test scope, but the `test` package also uses it. -->
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_2.10</artifactId>
       <version>2.2.2</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
