--- a/pom.xml
+++ b/pom.xml
@@ -327,11 +327,11 @@
       <version>[2.0.29,)</version>
     </dependency>
 
-    <!--Test deps-->
+    <!-- Used mostly in test scope, but the `test` package also uses these. -->
     <dependency>
       <groupId>com.holdenkarau</groupId>
       <artifactId>spark-testing-base_2.10</artifactId>
-      <version>${spark.version}_0.3.3</version>
+      <version>${spark.version}_0.4.4</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.guava</groupId>
@@ -340,7 +340,6 @@
       </exclusions>
     </dependency>
     <dependency>
-      <!-- Used mostly in test scope, but the `test` package also uses it. -->
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_2.10</artifactId>
       <version>2.2.2</version>
