--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>magic-rdds</artifactId>
+  <artifactId>magic-rdds_${scala.version.prefix}</artifactId>
   <version>1.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Magic RDDs: Extra Functionality for Spark RDDs</name>
