--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>magic-rdds_${scala.version.prefix}</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>jar</packaging>
   <name>Magic RDDs: Extra Functionality for Spark RDDs</name>
 
@@ -21,6 +21,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:hammerlab/magic-rdds.git</developerConnection>
+    <tag>1.2.0</tag>
   </scm>
 
   <profiles>
