--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
             <configuration>
+              <branchName>b@{project.version}_${scala.version.prefix}</branchName>
+              <tagNameFormat>@{project.version}_${scala.version.prefix}</tagNameFormat>
               <pushChanges>false</pushChanges>
               <remoteTagging>false</remoteTagging>
             </configuration>
