--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>magic-rdds</artifactId>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.1</version>
   <packaging>pom</packaging>
   <name>Magic RDDs: Extra Functionality for Spark RDDs</name>
 
@@ -21,7 +21,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:hammerlab/magic-rdds.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1.2.1</tag>
   </scm>
 
   <dependencies>
