--- a/2.10/pom.xml
+++ b/2.10/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>magic-rdds_2.10</artifactId>
-  <version>1.2.2</version>
+  <version>1.2.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Magic RDDs: Extra Functionality for Spark RDDs (Scala 2.10)</name>
 
   <parent>
     <groupId>org.hammerlab</groupId>
     <artifactId>magic-rdds</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3-SNAPSHOT</version>
   </parent>
 
   <properties>
