--- a/2.10/pom.xml
+++ b/2.10/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.hammerlab</groupId>
     <artifactId>magic-rdds</artifactId>
-    <version>1.2.3-SNAPSHOT</version>
+    <version>1.2.3</version>
   </parent>
 
   <properties>
