--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>magic-rdds</artifactId>
-  <version>1.2.4</version>
+  <version>1.2.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Magic RDDs: Extra Functionality for Spark RDDs</name>
 
