--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>magic-rdds</artifactId>
-  <version>1.2.6-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <version>1.2.8-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <name>Magic RDDs: Extra Functionality for Spark RDDs</name>
 
   <parent>
     <groupId>org.hammerlab</groupId>
     <artifactId>scala-parent-pom</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <relativePath />
   </parent>
 
@@ -20,11 +20,6 @@
     <target.dir>${repo.root}/target/${scala.version.prefix}</target.dir>
     <spark.hadoop.scope>provided</spark.hadoop.scope>
   </properties>
-
-  <scm>
-    <developerConnection>scm:git:git@github.com:hammerlab/magic-rdds.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
 
   <dependencies>
     <dependency>
