--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ jdk:
   - oraclejdk8
 
 scala:
-  - 2.10.6
   - 2.11.8
 
-script: sbt ++$TRAVIS_SCALA_VERSION clean coverage test
+script: sbt clean coverage test
 
 cache:
   directories:
@@ -16,7 +15,7 @@ cache:
   - $HOME/.sbt/boot/
   - $HOME/.zinc
 
-after_success: sbt ++$TRAVIS_SCALA_VERSION coverageReport coveralls
+after_success: sbt coverageReport coveralls
 
 before_cache:
   # Tricks to avoid unnecessary cache updates
