--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
 scala:
   - 2.11.8
 
-script: sbt clean coverage test
+script: sbt clean coverageTest
 
 cache:
   directories:
@@ -15,7 +15,7 @@ cache:
   - $HOME/.sbt/boot/
   - $HOME/.zinc
 
-after_success: sbt coverageReport coveralls
+after_success: sbt travis-report
 
 before_cache:
   # Tricks to avoid unnecessary cache updates
